test/errors/type/io/write4.yasl
let f = io.open('test/unit_tests/test_vm/sample.txt'); mt.lookup(f, .write)([], 'l')
